[package]
name = "esp32-tm1628"
version = "0.1.0"
authors = ["dan <Dan Greco>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
tm16xx = { path = "../..", features = ["tm1628"] }
anyhow = "1.0.71"
embedded-hal = "0.2.7"

[build-dependencies]
embuild = "0.31.1"


